--- a/Python_DataVia&Modeling_MinchenSun/Python_DataViz&Modeling_MinchenSun.ipynb
+++ b/Python_DataVia&Modeling_MinchenSun/Python_DataViz&Modeling_MinchenSun.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Skills for Public Policy -- F2019, *Assignment 7*\n",
-    "### Name: Minchen Sun (*UCID: 12179772, CNETID: minchensun*)"
+    "# Data Skills for Public Policy -- Final project\n",
+    "### *Exploratory Data Analysis, Interactive Data Visualization, Machine Learning Modeling*\n",
+    "### Name: Minchen Sun"
    ]
   },
   {
@@ -331,7 +332,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = r'/Users/MicharmSun/Documents/GitHub/assignment-7-minchensun'\n",
+    "path = r'/Users/MicharmSun/Documents/GitHub/Work-Sample/Python_DataVia&Modeling_MinchenSun'\n",
     "path_to_data = os.path.join(path, 'Dataset')\n",
     "file = 'EducationDataPortal_12.06.2019_institutions.csv'"
    ]
@@ -2016,7 +2017,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1847c5a89d034253a8bb8a7f50d0ae07",
+       "model_id": "3bd40774b75349dd868f0913020d274c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2079,7 +2080,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ec728b328e141db9022830c14166625",
+       "model_id": "b0de1fee1edd417eae4101b9bfc91b84",
        "version_major": 2,
        "version_minor": 0
       },
